ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sashok-ingress
spec:
  rules:
  - host: app.sashok.ln.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sashok-service
            port:
              number: 8080
